# optga

./: .gitignore  .travis.yaml  .travis.yml  README.md  README.rst  pyproject.toml
example/: 1_BostonHousingPrice.ipynb
example/boston_result/: X_init.csv  X_pareto.csv  Y_init.csv  Y_pareto.csv  log_Age.csv  log_Price.csv  opt_config.json
optga/: config.py  evaluater.py  optimizer.py  spawner.py  strategy.py  support.py
optga/tools/: constraint.py  mate.py  mutate.py  nsga2.py  select.py  sobol.py
optiga/: config.py  constants.py  evaluater.py  mate.py  optimizer.py  spawner.py  strategy.py  support.py
optiga/tools/: constraint.py  mate.py  mutate.py  nsga2.py  select.py
tests/: test_config.py  test_constraint.py  test_io.py  test_optga.py  test_optiga.py  test_optimizer.py  test_spawner.py  test_strategy.py
