[tool.poetry]
name = "optga"
version = "0.1.0"
description = "Library for inverse design from machine learing model using genetic algorithm"
authors = ["horoiwa <horoiwa195@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
pandas = "^0.25.3"
dataclasses_json = "^0.3.6"
numba = "^0.46.0"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
main = "tests.test_optga:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

